<resources>
    <string name="app_name">Group_5_project</string>

    <string name="notification_channel_ID">DiscreteNotifications</string>
    <string name="notification_channel_name">Discrete Notifications</string>
    <string name="notification_channel_description">Displays discrete notifications</string>
    <string name="notification_content">You have a new notification.</string>
    <string name="database_name">PeriodTrackerDatabase</string>

    <string name="today_page">Today Page</string>
    <string name="home_page">Home Page</string>
    <string name="health_page">Health Page</string>
    <string name="symptoms_page">Symptoms Page</string>

    <string name="mood_label">Mood:</string>
    <string name="symptoms_label">Symptoms:</string>

    <string name="symptoms_input">Add new Symptoms</string>
    <string name="symptoms_text">Type your symptoms here. Eg: Cramps, Headache</string>
    <string name="mood_text">Type your mood here. Eg: Happy, Tired</string>

    <string name="delete_label">Delete</string>
    <string name="save_label">Save</string>

    <string name="health_page_cycle_length">your cycle length</string>
    <string name="health_page_days">days</string>
    <string name="health_page_period_duration">your period duration</string>
    <string name="health_page_recycle_view_title_1">FAQs</string>
    <string name="health_page_recycle_view_title_2">Reproductive health</string>
    <string name="health_page_recycle_view_title_3">Pre-period days</string>

    <string name="select_date">Select a Date</string>
    <string name="prediction_label">Predictions</string>
    <string name="earliest_prediction">Earliest Date</string>
    <string name="latest_prediction">Latest Date</string>
    <string name="period_input">Add new Period</string>
    <string name="period_page">Period Page</string>
    <string name="period">Period</string>

    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
</resources>