<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="period"
            type="com.example.periodtracker.PeriodRecord" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SymptomsInputActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/period_input"
                    android:textSize="30dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp"></Space>

                <TextView
                    android:id="@+id/startLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/startdate"
                    android:textSize="24dp" />

                <EditText
                    android:id="@+id/startTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:focusableInTouchMode="false"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp"></Space>

                <TextView
                    android:id="@+id/endLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enddate"
                    android:textSize="24dp" />

                <EditText
                    android:id="@+id/endTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:focusableInTouchMode="false"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp"></Space>

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onSaveClick"
                    android:text="@string/save_label" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>