<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Health">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:paddingTop="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="350sp"
                android:layout_height="100sp"
                android:background="@drawable/pink_border_rounded_corner_layout"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health_page_cycle_length" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:gravity="center"
                        android:text="-"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health_page_days"
                        android:textSize="30sp" />
                </LinearLayout>

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/tracker_pink" />

                <LinearLayout
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health_page_period_duration" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="-"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/health_page_days"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10sp"
                    android:paddingTop="20sp"
                    android:paddingBottom="20sp"
                    android:text="@string/health_page_recycle_view_title_1" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/health_page_recycle_view_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"></androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10sp"
                    android:paddingTop="20sp"
                    android:paddingBottom="20sp"
                    android:text="@string/health_page_recycle_view_title_2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/health_page_recycle_view_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"></androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10sp"
                    android:paddingTop="20sp"
                    android:paddingBottom="20sp"
                    android:text="@string/health_page_recycle_view_title_3" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/health_page_recycle_view_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"></androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"></com.google.android.material.bottomnavigation.BottomNavigationView>

</LinearLayout>