<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">


    <!-- add this to the bottom of relevant pages -->

    <ImageView
        android:id="@+id/dateOval"
        android:layout_width="193dp"
        android:layout_height="182dp"
        android:layout_marginBottom="468dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/oval"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/day"
        android:layout_width="150dp"
        android:layout_height="63dp"
        android:layout_marginBottom="560dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text=" "
        android:textColor="@color/tracker_white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/month"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginBottom="496dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text=" "
        android:textColor="@color/tracker_white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/symptomsTitle"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginBottom="340dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/prediction_label"
        android:textColor="@color/tracker_pink"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        tools:layout_editor_absoluteX="0dp"></com.google.android.material.bottomnavigation.BottomNavigationView>

    <Button
        android:id="@+id/dateSelectButton"
        android:layout_width="257dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:onClick="onSelectDateClick"
        android:text="@string/select_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symptomsTitle" />

    <TextView
        android:id="@+id/minPredictionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="-"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateSelectButton" />

    <TextView
        android:id="@+id/maxPredictionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="-"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minPredictionText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/earliest_prediction"
        app:layout_constraintEnd_toStartOf="@+id/minPredictionText"
        app:layout_constraintTop_toBottomOf="@+id/dateSelectButton" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/latest_prediction"
        app:layout_constraintEnd_toStartOf="@+id/minPredictionText"
        app:layout_constraintTop_toBottomOf="@+id/minPredictionText" />


</androidx.constraintlayout.widget.ConstraintLayout>